--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
+		<!-- FONTS -->
+		<link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;500;600;700&display=swap" rel="stylesheet">
+		<link href="//db.onlinewebfonts.com/c/ca05bd57a546eb9007cb79fe70783db6?family=PT+Banana+Split" rel="stylesheet" type="text/css"/>		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
