better solution to load fonts

--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<!-- FONTS -->
-		<link href="https://fonts.googleapis.com/css2?family=Signika:wght@400;500;600;700&display=swap" rel="stylesheet">
-		<link href="//db.onlinewebfonts.com/c/ca05bd57a546eb9007cb79fe70783db6?family=PT+Banana+Split" rel="stylesheet" type="text/css"/>		%sveltekit.head%
+		<link href="//db.onlinewebfonts.com/c/b8410d24906695600346b88dde29355a?family=Austral+Sans+Rough+Regular" rel="stylesheet" type="text/css"/>
+		<link href="//db.onlinewebfonts.com/c/ca05bd57a546eb9007cb79fe70783db6?family=PT+Banana+Split" rel="stylesheet" type="text/css"/>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
