--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<!-- FONTS -->
 		<link href="//db.onlinewebfonts.com/c/b8410d24906695600346b88dde29355a?family=Austral+Sans+Rough+Regular" rel="stylesheet" type="text/css"/>
 		<link href="//db.onlinewebfonts.com/c/ca05bd57a546eb9007cb79fe70783db6?family=PT+Banana+Split" rel="stylesheet" type="text/css"/>
+		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
