--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<!-- FONTS -->
 		<!-- <link href="//db.onlinewebfonts.com/c/b8410d24906695600346b88dde29355a?family=AustralSansRough-Regular" rel="stylesheet" type="text/css"/>
 		<link href="//db.onlinewebfonts.com/c/ca05bd57a546eb9007cb79fe70783db6?family=PT+Banana+Split" rel="stylesheet" type="text/css"/> -->
