--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<meta name="viewport" content="width=device-width" />
 		<!-- FONTS -->
 		<!-- <link href="//db.onlinewebfonts.com/c/b8410d24906695600346b88dde29355a?family=AustralSansRough-Regular" rel="stylesheet" type="text/css"/>
 		<link href="//db.onlinewebfonts.com/c/ca05bd57a546eb9007cb79fe70783db6?family=PT+Banana+Split" rel="stylesheet" type="text/css"/> -->
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
